[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
inkwell = { version = "0.6", features = [
  "llvm17-0",
  "llvm17-0-prefer-dynamic",
] }
ureq = "3.1"
logos = "0.15"
memchr = "2.7.5"
paste = "1.0.15"
linkme = "0.3.33"

# Requires a system LLVM installation (LLVM 17). The install step below will
# add the official LLVM apt repo and install LLVM 17 in WSL. After that we'll
# build the crate inside WSL so `inkwell` can link against system LLVM.
